name:                biking
version:             0.1.0.0
synopsis:            A biking web app
description:         Please see README.md
homepage:            http://sencjw.com/functional_web.html
license:             BSD3
license-file:        LICENSE
author:              Chris Wilson
maintainer:          chris@sencjw.com
copyright:           2010 Chris Wilson
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable biking
  ghc-options:         -Wall -Werror
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Controllers
                     , DB
                     , Types
                     , Views
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock
                     , Spock-digestive
                     , blaze-html
                     , bytestring
                     , digestive-functors
                     , digestive-functors-blaze
                     , hasql
                     , hasql-postgres
                     , text
                     , time
                     , transformers
